src/test/ui/const-generics/defaults/complex-unord-param.min.stderr
error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/complex-unord-param.rs:8:64
   |
LL | struct NestedArrays<'a, const N: usize, A: 'a, const M: usize, T: 'a = u32> {
   |                                                                ^^^^^^^^^^^

error: type parameters must be declared prior to const parameters
  --> $DIR/complex-unord-param.rs:8:41
   |
LL | struct NestedArrays<'a, const N: usize, A: 'a, const M: usize, T: 'a = u32> {
   |                    ---------------------^---------------------------------- help: reorder the parameters: `<'a, A: 'a, const N: usize, const M: usize, T: 'a = u32>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts, then defaulted parameters

error: aborting due to 2 previous errors

